@@ -1,3 +1,14 @@
+2017-01-10 Jana Mendrok  <jana.mendrok@chalmers.se>
+
+	* arts-2-3-585
+
+	* src/rt4.cc,h (sca_optpropCalc):
+	Modified test for scattering matrix normalization (consistently with
+	scat_dataCheck use albedo deviation). Throw more helpful error message.
+
+	* src/m_rt4.cc, methods.cc (RT4Calc):
+	Made above mentioned albedo deviation treshold user definable parameter.
+
 2017-01-05  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-584
